Make sure to set JVM options also when there is no nodes element in services.xml